@@ -3,7 +3,7 @@
 		<td>
 			<table cellpadding="0" cellspacing="0">
 				<tr>
-					<td width="20">
+					<td nowrap style='white-space: nowrap;' width="50">
 						Host:&nbsp;
 					</td>
 					<td width="1">
@@ -39,9 +39,8 @@
 							?>
 						</select>
 					</td>
-					<td width="5"></td>
-					<td width="80">
-						Query Name:&nbsp;
+					<td nowrap style='white-space: nowrap;' width="90">
+						&nbsp;Query Name:&nbsp;
 					</td>
 					<td width="1">
 						<select name="snmp_query_id" onChange="applyViewSNMPFilterChange(document.form_snmpcache)">
@@ -73,14 +72,13 @@
 							?>
 						</select>
 					</td>
-					<td width="5"></td>
-					<td width="20">
-						Search:&nbsp;
+					<td nowrap style='white-space: nowrap;' width="50">
+						&nbsp;Search:&nbsp;
 					</td>
 					<td width="1">
 						<input type="text" name="filter" size="20" value="<?php print $_REQUEST["filter"];?>">
 					</td>
-					<td>
+					<td nowrap style='white-space: nowrap;'>
 						&nbsp;<input type="image" src="images/button_go.gif" name="go" alt="Go" border="0" align="absmiddle">
 						<input type="image" src="images/button_clear.gif" name="clear" alt="Clear" border="0" align="absmiddle">
 					</td>
